--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -26,7 +26,7 @@ I attended East side High school.I graduated toward the slowing of the pandemic,
  For this class  you need a computer you can use at home.  So, what kind is it (windows, Apple, Linux)?  On a scale of 1 to 10, where 1 is a total dummy (doesn't know a mouse from a keyboard) and 10 is a complete geek (knows computer stuff in and out) How do you rate yourself?  You also need to have have internet access. How is your connection to the internet where you live?
 
 ### my answer   
-  
+I  currently use an apple laptop for school but I used to use a laptop that ran on windows. I would say that my knowledge of computers is about a 6 or 7.My internet speed is pretty decent.   
    
 
 ## Others and You?   
