--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -33,7 +33,7 @@ I  currently use an apple laptop for school but I used to use a laptop that ran 
 What name do you prefer to be called by your classmates and instructor, if your buddys call you something but you want people in the class to call you something else - what would that be? 
 
 ### my answer     
-I typically go by Alexis, co workers at times call me Alex but my friends go back and forth. I don't mind going by either name I will respond.   
+I typically go by Alexis, co workers at times call me Alex but my friends go back and forth. I don't mind going by either name I respond to both.   
    
  
 
