--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -44,7 +44,7 @@ I typically go by Alexis, co workers at times call me Alex but my friends go bac
 What do you want to achieve in life?  What college subject do you think would be of the greatest interest to you? What degree or certificate are you trying to achieve?
 
 ### my answer     
-I would like to have consant job where I actually enjoy and get to use my degree. Computer science definity intrest me the most I enjoy seeing the inerworkings of everything. I am trying to achiev an assoicates in computer science and applications.  
+I would like to have constant job where I actually enjoy and get to use my degree. Computer science interest me the most I enjoy seeing the inner workings of everything. I am trying to achieve an assoicates in computer science and applications.  
    
  
 
