--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -44,7 +44,7 @@ I typically go by Alexis, co workers at times call me Alex but my friends go bac
 What do you want to achieve in life?  What college subject do you think would be of the greatest interest to you? What degree or certificate are you trying to achieve?
 
 ### my answer     
-I would like to have constant job where I actually enjoy and get to use my degree. Computer science interest me the most I enjoy seeing the inner workings of everything. I am trying to achieve an assoicates in computer science and applications.  
+I would like to have constant job where I actually enjoy and get to use my degree. Computer science interest me the most I enjoy seeing the inner workings of everything. I am trying to achieve an associates in computer science and applications.  
    
  
 
@@ -55,7 +55,7 @@ I would like to have constant job where I actually enjoy and get to use my degre
 Have you ever gone to foreign countries, if so which ones, if not Where might you go in the future?  Have you ever been in the military, if so which branch, if not which branch would you choose if you got drafted, and why?
 
 ### my answer     
-  
+I've never been out of the United states, I don't even have a passport. However I would love to go to Japan or Europe.No I have not been in the military but if I were to be drafted I would most likely choose the air force. It seems the most interesting and active from the outside prespective.  
    
   
 
