Final Question answered

--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -55,7 +55,7 @@ I would like to have constant job where I actually enjoy and get to use my degre
 Have you ever gone to foreign countries, if so which ones, if not Where might you go in the future?  Have you ever been in the military, if so which branch, if not which branch would you choose if you got drafted, and why?
 
 ### my answer     
-I've never been out of the United states, I don't even have a passport. However I would love to go to Japan or Europe.No I have not been in the military but if I were to be drafted I would most likely choose the air force. It seems the most interesting and active from the outside prespective.  
+I've never been out of the United states, I don't even have a passport. However I would love to go to Japan or Europe.No I have not been in the military but if I were to be drafted I would most likely choose the air force. It seems the most interesting and active from the outside perspective.  
    
   
 
@@ -68,7 +68,7 @@ What grade do you need to attain in stats to not upset your future plans, What i
  
 
 ### my answer     
-  
+I am taking 115. I didn't know that 115 was only a general credit or that there was a different statistics in general let alone a course that would transfer over. I think I need just a passing grade to maintain future plans but I would like to get an A or B in the course. My plan is to transfer out to a UC, most likely CSUN because I have already attend a semester there.
    
  
 
